fix: Increased z-index of conversions-footer to 5 so it's not behind the main footer

--- a/director/assets/sass/styles.sass
+++ b/director/assets/sass/styles.sass
@@ -228,6 +228,7 @@ h6.has-top-margin
   background-color: transparent
   position: fixed
   bottom: 10px
+  z-index: 5
   height: auto
 
   .button.is-borderless
